<resources>
    <string name="app_name">FireRTC</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="test_data">Test Data</string>
    <string name="user">User</string>
    <string name="id">ID</string>
    <string name="pwd">Password</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="get">Get</string>
    <string name="room">Room</string>
    <string name="join">Join</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="mute_on">Mute On</string>
    <string name="mute_off">Mute Off</string>
    <string name="speaker_on">Speaker On</string>
    <string name="speaker_off">Speaker Off</string>
    <string name="end">End</string>
    <string name="sign_out">Sign Out</string>
    <string name="assets_management">Assets Management</string>
    <string name="add_contact">Add Contact</string>
    <string name="empty">Empty</string>
    <string name="find">Find</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="no_one">No One</string>
    <string name="add_chat">Add Chat</string>
    <string name="call_from">Call From</string>

    <string name="empty_warn">%s can\'t be empty</string>
    <string name="create_warn">Can\'t create</string>
    <string name="duplicate_warn">Duplicate name</string>
    <string name="no_user_warn">No User</string>
    <string name="already_warn">Already Added</string>
    <string name="mine_warn">This is mine</string>

    <string name="delete_contact">Do u want to del this contact?</string>
    <string name="quit_chat">Do u want to quit this chat?</string>
    <string name="delete_history">Do u want to del this history?</string>

    <string name="receive_notification">Receive Call</string>
    <string name="receive_notification_desc">Receive Call Notification Description</string>
    <string name="call_notification">Call</string>
    <string name="call_notification_desc">Call Notification Description</string>
    <string name="message_notification">Message</string>
    <string name="message_notification_desc">Received Message Notification Description</string>

    <string name="portfolio_name">Portfolio Name</string>
    <string name="portfolio_currency">Currency</string>
    <string name="delete_portfolio">Do u want to del this portfolio?</string>

    <string name="ticker_hint">Ticker or code</string>
    <string name="amount_hint">Amount ex)3.14</string>
    <string name="price_hint">Average buying price</string>

</resources>