<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="user"
            type="kr.young.firertc.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/rl_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" >

            <TextView
                android:id="@+id/tv_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/user"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@{user.name}"
                android:textSize="15sp"
                android:textColor="@color/border"
                android:layout_below="@+id/tv_user_title" />

            <RelativeLayout
                android:id="@+id/rl_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tv_user_title" >

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingVertical="10dp"
                    android:hint="@string/id"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/tv_user_warn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#b31030"
                    android:textSize="15sp"
                    android:layout_below="@+id/et_user_name" />

                <TextView
                    android:id="@+id/tv_user_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:background="@color/background_gray"
                    android:textSize="16sp"
                    android:text="@string/start"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/et_user_name" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/room"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/rl_user"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingVertical="10dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/tv_room"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="#b31030"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/et_name"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:background="@color/background_gray"
            android:textSize="16sp"
            android:text="@string/join"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:background="@color/background_gray"
            android:textSize="16sp"
            android:text="@string/start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_join" />

        <TextView
            android:id="@+id/tv_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:background="@color/background_gray"
            android:textSize="16sp"
            android:text="@string/stop"
            app:layout_constraintLeft_toRightOf="@+id/tv_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_join" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
