<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.CallActivity">

    <data>
        <variable
            name="space"
            type="kr.young.examplewebrtc.model.Space" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@{space.name}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/mute_on"
            app:layout_constraintBottom_toTopOf="@+id/tv_end"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/speaker_on"
            app:layout_constraintBottom_toTopOf="@+id/tv_end"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#F74417"
            android:textStyle="bold"
            android:text="@string/end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>